<resources>
    <string name="app_name">Beck_SimpleBoggle</string>
    <string name="enter_a_word_then_hit_submit">Enter a word then hit submit</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="score">Score:</string>
    <string name="default_score">0</string>
    <string name="submit_button">Submit</string>
    <string name="new_game">New Game</string>
    <string name="boggle">Boggle!</string>
    <string name="word">WORD</string>
</resources>