<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:paddingTop="50dp"


        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boggle"
            android:textSize="50dp"
            android:textStyle="bold"
            android:layout_gravity="center">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingBottom="10dp"
            android:text="@string/enter_a_word_then_hit_submit"

            android:textSize="20sp">

        </TextView>

        <GridLayout

            android:id="@+id/game_letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:rowCount="4">



            <Button

                android:id="@+id/Button00"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0">


            </Button>

            <Button
                android:id="@+id/Button01"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1">


            </Button>

            <Button
                android:id="@+id/Button02"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2">


            </Button>

            <Button
                android:id="@+id/Button03"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="3">


            </Button>

            <Button
                android:id="@+id/Button10"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0">

            </Button>

            <Button
                android:id="@+id/Button11"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1">

            </Button>

            <Button
                android:id="@+id/Button12"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2">

            </Button>

            <Button
                android:id="@+id/Button13"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3">

            </Button>

            <Button
                android:id="@+id/Button20"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0">

            </Button>

            <Button
                android:id="@+id/Button21"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1">

            </Button>

            <Button
                android:id="@+id/Button22"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2">

            </Button>

            <Button
                android:id="@+id/Button23"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3">

            </Button>

            <Button
                android:id="@+id/Button30"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0">

            </Button>

            <Button
                android:id="@+id/Button31"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1">

            </Button>

            <Button
                android:id="@+id/Button32"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="2">

            </Button>

            <Button
                android:id="@+id/Button33"
                style="@style/CustomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="3">

            </Button>
        </GridLayout>

        <TextView
            android:id="@+id/word_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="Word"
            android:textSize="30sp">


        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="140dp"
                android:text="@string/clear"

                >


            </Button>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/submit"


                >


            </Button>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>